Fix checkstyle issues in legend-pure-runtime-java-extension-functions-json