@@ -15,39 +15,37 @@
 package org.finos.legend.pure.runtime.java.extension.external.json.interpreted.natives;
 
 import org.eclipse.collections.api.RichIterable;
-import org.eclipse.collections.api.block.function.Function;
+import org.eclipse.collections.api.factory.Lists;
 import org.eclipse.collections.api.list.ListIterable;
 import org.eclipse.collections.api.map.MutableMap;
-import org.eclipse.collections.impl.factory.Lists;
-import org.finos.legend.pure.m3.navigation.M3Properties;
-import org.finos.legend.pure.m3.exception.PureExecutionException;
 import org.finos.legend.pure.m3.compiler.Context;
-import org.finos.legend.pure.m3.navigation.Instance;
-import org.finos.legend.pure.m3.navigation.ValueSpecificationBootstrap;
 import org.finos.legend.pure.m3.coreinstance.meta.pure.metamodel.function.property.Property;
 import org.finos.legend.pure.m3.coreinstance.meta.pure.metamodel.function.property.QualifiedProperty;
 import org.finos.legend.pure.m3.coreinstance.meta.pure.metamodel.multiplicity.Multiplicity;
-import org.finos.legend.pure.m3.coreinstance.meta.pure.metamodel.type.Any;
 import org.finos.legend.pure.m3.coreinstance.meta.pure.metamodel.type.AnyCoreInstanceWrapper;
 import org.finos.legend.pure.m3.coreinstance.meta.pure.metamodel.type.Type;
 import org.finos.legend.pure.m3.coreinstance.meta.pure.metamodel.valuespecification.InstanceValue;
-import org.finos.legend.pure.m3.navigation.ProcessorSupport;
+import org.finos.legend.pure.m3.exception.PureExecutionException;
+import org.finos.legend.pure.m3.navigation.Instance;
+import org.finos.legend.pure.m3.navigation.M3Properties;
 import org.finos.legend.pure.m3.navigation.PrimitiveUtilities;
-import org.finos.legend.pure.m4.coreinstance.CoreInstance;
+import org.finos.legend.pure.m3.navigation.ProcessorSupport;
+import org.finos.legend.pure.m3.navigation.ValueSpecificationBootstrap;
 import org.finos.legend.pure.m4.ModelRepository;
+import org.finos.legend.pure.m4.coreinstance.CoreInstance;
 import org.finos.legend.pure.m4.coreinstance.primitive.FloatCoreInstance;
 import org.finos.legend.pure.m4.coreinstance.primitive.PrimitiveCoreInstance;
 import org.finos.legend.pure.m4.coreinstance.simple.SimpleCoreInstance;
+import org.finos.legend.pure.runtime.java.extension.external.json.shared.JsonSerializationCache;
+import org.finos.legend.pure.runtime.java.extension.external.json.shared.JsonSerializationContext;
+import org.finos.legend.pure.runtime.java.extension.external.json.shared.JsonSerializer;
+import org.finos.legend.pure.runtime.java.extension.functions.interpreted.natives.anonymousCollections.map.KeyValues;
 import org.finos.legend.pure.runtime.java.interpreted.ExecutionSupport;
 import org.finos.legend.pure.runtime.java.interpreted.FunctionExecutionInterpreted;
 import org.finos.legend.pure.runtime.java.interpreted.VariableContext;
 import org.finos.legend.pure.runtime.java.interpreted.natives.InstantiationContext;
 import org.finos.legend.pure.runtime.java.interpreted.natives.NativeFunction;
-import org.finos.legend.pure.runtime.java.extension.functions.interpreted.natives.anonymousCollections.map.KeyValues;
 import org.finos.legend.pure.runtime.java.interpreted.profiler.Profiler;
-import org.finos.legend.pure.runtime.java.extension.external.json.shared.JsonSerializationCache;
-import org.finos.legend.pure.runtime.java.extension.external.json.shared.JsonSerializationContext;
-import org.finos.legend.pure.runtime.java.extension.external.json.shared.JsonSerializer;
 
 import java.math.BigDecimal;
 import java.util.Stack;
@@ -56,15 +54,6 @@ public class ToJson extends NativeFunction
 {
     private final ModelRepository repository;
     private final FunctionExecutionInterpreted functionExecution;
-
-    private static final Function<CoreInstance, Any> SIMPLE_CORE_INSTANCE_TO_ANY = new Function<CoreInstance, Any>()
-    {
-        @Override
-        public Any valueOf(CoreInstance object)
-        {
-            return AnyCoreInstanceWrapper.toAny(object);
-        }
-    };
 
     public ToJson(FunctionExecutionInterpreted functionExecution, ModelRepository modelRepository)
     {
@@ -75,12 +64,12 @@ public class ToJson extends NativeFunction
     @Override
     public CoreInstance execute(ListIterable<? extends CoreInstance> params, final Stack<MutableMap<String, CoreInstance>> resolvedTypeParameters, final Stack<MutableMap<String, CoreInstance>> resolvedMultiplicityParameters, final VariableContext variableContext, final CoreInstance functionExpressionToUseInStack, final Profiler profiler, final InstantiationContext instantiationContext, final ExecutionSupport executionSupport, Context context, final ProcessorSupport processorSupport) throws PureExecutionException
     {
-        ListIterable<? extends CoreInstance> pureObjects = Instance.getValueForMetaPropertyToManyResolved(params.get(0) , M3Properties.values, processorSupport);
-        if (pureObjects.getFirst() instanceof SimpleCoreInstance && !((SimpleCoreInstance)pureObjects.getFirst()).getClassifier().getName().equals("Map"))
+        ListIterable<? extends CoreInstance> pureObjects = Instance.getValueForMetaPropertyToManyResolved(params.get(0), M3Properties.values, processorSupport);
+        if (pureObjects.getFirst() instanceof SimpleCoreInstance && !"Map".equals(pureObjects.getFirst().getClassifier().getName()))
         {
-            pureObjects = pureObjects.collect(SIMPLE_CORE_INSTANCE_TO_ANY);
+            pureObjects = pureObjects.collect(AnyCoreInstanceWrapper::toAny);
         }
-        CoreInstance jsonConfig = Instance.getValueForMetaPropertyToOneResolved(params.get(1) , M3Properties.values, processorSupport);
+        CoreInstance jsonConfig = Instance.getValueForMetaPropertyToOneResolved(params.get(1), M3Properties.values, processorSupport);
         String typeKeyName = PrimitiveUtilities.getStringValue(jsonConfig.getValueForMetaPropertyToOne("typeKeyName"));
         boolean includeType = PrimitiveUtilities.getBooleanValue(jsonConfig.getValueForMetaPropertyToOne("includeType"), false);
         boolean fullyQualifiedTypePath = PrimitiveUtilities.getBooleanValue(jsonConfig.getValueForMetaPropertyToOne("fullyQualifiedTypePath"), false);
@@ -94,13 +83,13 @@ public class ToJson extends NativeFunction
         ListIterable<? extends CoreInstance> encryptionStereotypes = jsonConfig.getValueForMetaPropertyToMany("encryptionStereotypes");
         ListIterable<? extends CoreInstance> decryptionStereotypes = jsonConfig.getValueForMetaPropertyToMany("decryptionStereotypes");
 
-        String json = JsonSerializer.toJson((ListIterable<? extends Any>)pureObjects, processorSupport, new JsonSerializationContext<CoreInstance, CoreInstance>(new JsonSerializationCache(), functionExpressionToUseInStack.getSourceInformation(), processorSupport, new Stack(), typeKeyName, includeType, fullyQualifiedTypePath, serializeQualifiedProperties, dateTimeFormat, serializePackageableElementName, removePropertiesWithEmptyValues, serializeMultiplicityAsNumber, encryptionKey, encryptionStereotypes, decryptionKey, decryptionStereotypes) {
-
+        String json = JsonSerializer.toJson(pureObjects, processorSupport, new JsonSerializationContext<CoreInstance, CoreInstance>(new JsonSerializationCache(), functionExpressionToUseInStack.getSourceInformation(), processorSupport, new Stack<>(), typeKeyName, includeType, fullyQualifiedTypePath, serializeQualifiedProperties, dateTimeFormat, serializePackageableElementName, removePropertiesWithEmptyValues, serializeMultiplicityAsNumber, encryptionKey, encryptionStereotypes, decryptionKey, decryptionStereotypes)
+        {
             @Override
             protected Object extractPrimitiveValue(Object potentiallyWrappedPrimitive)
             {
-                Object val = potentiallyWrappedPrimitive instanceof PrimitiveCoreInstance ? ((PrimitiveCoreInstance)potentiallyWrappedPrimitive).getValue() : potentiallyWrappedPrimitive;
-                val = potentiallyWrappedPrimitive instanceof FloatCoreInstance && val instanceof BigDecimal ? ((BigDecimal)val).doubleValue() : val;
+                Object val = potentiallyWrappedPrimitive instanceof PrimitiveCoreInstance ? ((PrimitiveCoreInstance) potentiallyWrappedPrimitive).getValue() : potentiallyWrappedPrimitive;
+                val = potentiallyWrappedPrimitive instanceof FloatCoreInstance && val instanceof BigDecimal ? ((BigDecimal) val).doubleValue() : val;
                 return val;
             }
 
@@ -109,10 +98,10 @@ public class ToJson extends NativeFunction
             {
                 CoreInstance res = ToJson.this.functionExecution.executeProperty(property, true, resolvedTypeParameters, resolvedMultiplicityParameters, getParentOrEmptyVariableContext(variableContext), profiler, Lists.immutable.with(ValueSpecificationBootstrap.wrapValueSpecification(pureObject, true, processorSupport)), functionExpressionToUseInStack, instantiationContext, executionSupport);
 
-                if(res instanceof InstanceValue)
+                if (res instanceof InstanceValue)
                 {
-                    RichIterable values = ((InstanceValue)res)._values();
-                    return (values.getFirst() instanceof SimpleCoreInstance && !((SimpleCoreInstance)values.getFirst()).getClassifier().getName().equals("Map")) ? values.collect(SIMPLE_CORE_INSTANCE_TO_ANY) : values;
+                    RichIterable<?> values = ((InstanceValue) res)._values();
+                    return (values.getFirst() instanceof SimpleCoreInstance && !"Map".equals(((SimpleCoreInstance) values.getFirst()).getClassifier().getName())) ? values.collect(v -> AnyCoreInstanceWrapper.toAny((CoreInstance) v)) : values;
                 }
                 return res;
             }
@@ -120,12 +109,10 @@ public class ToJson extends NativeFunction
             @Override
             protected Object evaluateQualifiedProperty(CoreInstance pureObject, QualifiedProperty qualifiedProperty, Type type, Multiplicity multiplicity, String propertyName)
             {
-                Stack empty = new Stack();
-                CoreInstance res = ToJson.this.functionExecution.executeFunction(false, qualifiedProperty, Lists.immutable.with(ValueSpecificationBootstrap.wrapValueSpecification(pureObject, true, processorSupport)), empty, empty, getParentOrEmptyVariableContextForLambda(variableContext, qualifiedProperty),
-                        functionExpressionToUseInStack, profiler, instantiationContext, executionSupport);
-                if(res instanceof InstanceValue)
+                CoreInstance res = ToJson.this.functionExecution.executeFunction(false, qualifiedProperty, Lists.immutable.with(ValueSpecificationBootstrap.wrapValueSpecification(pureObject, true, processorSupport)), new Stack<>(), new Stack<>(), getParentOrEmptyVariableContextForLambda(variableContext, qualifiedProperty), functionExpressionToUseInStack, profiler, instantiationContext, executionSupport);
+                if (res instanceof InstanceValue)
                 {
-                    return ((InstanceValue)res)._values();
+                    return ((InstanceValue) res)._values();
                 }
                 return res;
             }
